feat: Add interactive Figma prototype section to landing page

--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
         </div>
     </section>
 
+    <section id="prototype" class="prototype">
+        <div class="container">
+            <h2>Experience BinderChain</h2>
+            <p>Explore our interactive prototype</p>
+            <div class="prototype-container">
+                <iframe 
+                    src="https://embed.figma.com/proto/dvkLdZ1SZj7hmUP4cVCy99/BinderChain-Prototype?node-id=4-102&p=f&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=4%3A102&embed-host=share" 
+                    allowfullscreen
+                    title="BinderChain Interactive Prototype"
+                ></iframe>
+            </div>
+        </div>
+    </section>
+
     <section id="signup" class="signup">
         <div class="container">
             <h2>Join the Digital Revolution</h2>
