feat: replace Learn More with Try Now button linking to prototype section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <p class="subtitle">Create, trade, and manage unique digital assets with blockchain-powered authentication</p>
             <div class="cta-group">
                 <button class="primary" onclick="scrollToSignup()">Join the Waitlist</button>
-                <button class="secondary" onclick="scrollToFeatures()">Learn More</button>
+                <button class="secondary" onclick="scrollToPrototype()">Try Now</button>
             </div>
         </div>
     </header>
